packages/renderer/src/dashboard/views/ProductivityView/ChartTooltip.module.scss
.chartTooltip {
  position: absolute;
  z-index: 100;
  display: inline-block;
  padding: 16px;
  background-color: var(--dashboard-tooltip-background);
  color: var(--dashboard-tooltip-text);
  pointer-events: none;
  transform: translateY(-55%);
}

.content {
  margin-top: 12px;
}

.stats {
  display: grid;
  grid-template-columns: 1fr auto;
  row-gap: 8px;
}

.statGroup {
  display: grid;
  column-gap: 8px;
  grid-column: 1 / -1;
  grid-template-columns: subgrid;

  dd {
    justify-self: end;
  }
}

